[package]
name = "gdev"
version = "0.1.0"
authors = ["R1tschY <r1tschy@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
panic = "abort"

[dependencies]
rusb = "0.9.2"
hex = "0.4.3"
structopt = "0.3.25"
dbus = "0.9.7"
dbus-tree = "0.9.2"
log = "0.4.14"
simple_logger = { version = "4.1.0", default_features = false }
rust-ini = "0.19.0"
quick-error = "2.0.1"