[package]
name = "gdevd"
version = "0.2.1"
authors = ["Richard Liebscher <r1tschy@posteo.de>"]
license = "MIT OR Apache-2.0"
description = "Daemon to control background LEDs of Logitech gaming devices"
repository = "https://github.com/R1tschY/gdevd"
readme = "README.md"
keywords = ["logitech", "led"]
exclude = [".*"]

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
panic = "abort"

[dependencies]
rusb = "0.9.4"
hex = "0.4.3"
clap = { version = "4.5.60", features = ["derive"] }
dbus = "0.9.10"
dbus-tree = "0.9.2"
log = "0.4.29"
simple_logger = { version = "5.2.0", default-features = false }
rust-ini = "0.21.3"
quick-error = "2.0.1"
signal-hook = { version = "0.4.3", features = ["iterator"] }

[package.metadata.release]
allow-branch = ["master"]
pre-release-commit-message = "Release"
tag-message = "Release {{version}}"
